--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.8",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
